fix safari flex stretch

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -75,6 +75,7 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: flex-start;
 }
 .photo.me {
   width: 60%;
